kubernetes/apps/kube-system/cilium/hubble/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  parentRefs:
  - name: internal
    namespace: kube-system
    sectionName: domain-5-subdomain-https
  hostnames:
  - "hubble.${DOMAIN_5}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
